--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -2,29 +2,27 @@ name: Wind Breaker
 
 on:
   push:
-    branches: [master] # Ensures the workflow triggers on pushes to master
-
+    branches: [master]
   schedule:
-    - cron: '0 */12 * * *' # Executes every 12 hours
-
-  workflow_dispatch: # Allows manual triggering from the GitHub UI
+    - cron: '0 */12 * * *'
+  workflow_dispatch:
 
 permissions:
-  contents: write # Grants permissions to write to the repo
+  contents: write
 
 jobs:
   update_commit:
-    runs-on: ubuntu-latest # Specifies the runner
+    runs-on: ubuntu-latest
 
     steps:
       - name: Setup Debug Information
         run: echo "::debug::Triggered by ref = ${{github.ref}}"
 
       - name: Checkout Code
-        uses: actions/checkout@v3 # Latest version for optimized performance
+        uses: actions/checkout@v3
         with:
-          persist-credentials: true # Ensures credentials are available for subsequent steps
-          fetch-depth: 0 # Fetches all history for all branches and tags
+          persist-credentials: true
+          fetch-depth: 0
 
       - name: Update Timestamp File
         run: |
@@ -43,6 +41,9 @@ jobs:
 
           git add TIMESTAMP.txt
           git commit -m "$random_msg - $current_time" || echo "No changes to commit."
+
+      - name: Pull latest changes from remote
+        run: git pull origin master --rebase
 
       - name: GitHub Push
         uses: ad-m/github-push-action@v0.6.0
