--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -2,9 +2,9 @@ name: Wind Breaker
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   schedule:
-    - cron: '0 */12 * * *'
+    - cron: '*/5 * * * *'
   workflow_dispatch:
 
 permissions:
@@ -43,7 +43,7 @@ jobs:
           git commit -m "$random_msg - $current_time" || echo "No changes to commit."
 
       - name: Pull latest changes from remote
-        run: git pull origin master --rebase
+        run: git pull origin main --rebase
 
       - name: GitHub Push
         uses: ad-m/github-push-action@v0.6.0
