--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -42,8 +42,11 @@ jobs:
           git add TIMESTAMP.txt
           git commit -m "$random_msg - $current_time" || echo "No changes to commit."
 
+      - name: Ensure Correct Upstream
+        run: git branch --set-upstream-to=origin/main main
+
       - name: Pull latest changes from remote
-        run: git pull
+        run: git pull origin main --rebase
 
       - name: GitHub Push
         uses: ad-m/github-push-action@v0.6.0
