--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -5,7 +5,7 @@ on:
     branches: [master] # Ensures the workflow triggers on pushes to master
     
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 */8 * * *'
   workflow_dispatch:
 
 permissions:
